[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/input_gyro.gd" type="Script" id=1]
[ext_resource path="res://gfx/icon.png" type="Texture" id=2]

[node name="Scene" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 103.0
margin_bottom = 36.0
custom_constants/margin_top = 4
custom_constants/margin_left = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 103.0
margin_bottom = 54.0

[node name="GyroLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 99.0
margin_bottom = 14.0
text = "Gyro:"

[node name="AccelerometerLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 99.0
margin_bottom = 32.0
text = "Accelerometer:"

[node name="GravityLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 99.0
margin_bottom = 50.0
text = "Gravity:"

[node name="RotatingIconsContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.0
margin_top = -48.0
margin_right = 133.0
margin_bottom = 48.0
custom_constants/separation = 16

[node name="XContainer" type="PanelContainer" parent="RotatingIconsContainer"]
margin_right = 78.0
margin_bottom = 96.0

[node name="VBoxContainer" type="VBoxContainer" parent="RotatingIconsContainer/XContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 71.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="RotatingIconsContainer/XContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 14.0
text = "X"
align = 1

[node name="IconX" type="TextureRect" parent="RotatingIconsContainer/XContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 2 )

[node name="YContainer" type="PanelContainer" parent="RotatingIconsContainer"]
margin_left = 94.0
margin_right = 172.0
margin_bottom = 96.0

[node name="VBoxContainer" type="VBoxContainer" parent="RotatingIconsContainer/YContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 71.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="RotatingIconsContainer/YContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 14.0
text = "Y"
align = 1

[node name="IconY" type="TextureRect" parent="RotatingIconsContainer/YContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 2 )

[node name="ZContainer" type="PanelContainer" parent="RotatingIconsContainer"]
margin_left = 188.0
margin_right = 266.0
margin_bottom = 96.0

[node name="VBoxContainer" type="VBoxContainer" parent="RotatingIconsContainer/ZContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 71.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="RotatingIconsContainer/ZContainer/VBoxContainer"]
margin_right = 64.0
margin_bottom = 14.0
text = "Z"
align = 1

[node name="IconZ" type="TextureRect" parent="RotatingIconsContainer/ZContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 64.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 2 )
